# pdf-extractortext

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
APP/: converter.py  file_manager.py  leeme.txt  main.py
APP/api/: dependencies.py  routes.py
APP/api/static/: index.html
APP/application/dto/: document_dto.py
APP/application/services/: checksum_service.py  document_service.py
APP/config/: settings.py
APP/domain/models/: document.py
APP/domain/repositories/: document_repository.py
APP/infrastructure/persistence/: database.py  mongo_repository.py
APP/services/: pdf_service.py
APP/tests/: test_converter.py
docs/diagramas/: diagrama_de_clases.puml  diagrama_de_secuencia.puml
tests/: conftest.py  test_main.py
tests/integration/: test_upload_pdf.py
tests/unit/: test_checksum_service.py  test_crud_endpoints.py  test_document.py  test_document_service.py  test_mongo_repository.py  test_repository.py
